--- a/Pages/Shared/__Contact.cshtml
+++ b/Pages/Shared/__Contact.cshtml
@@ -1,4 +1,6 @@
-﻿<div class="container-fluid py-5 wow fadeInUp" data-wow-delay="0.1s">
+﻿@model HACT.Pages.ContactModel
+
+<div class="container-fluid py-5 wow fadeInUp" data-wow-delay="0.1s">
     <div class="container py-5">
         <!-- Section Title -->
         <div class="section-title text-center position-relative pb-3 mb-5 mx-auto" style="max-width: 600px;">
@@ -37,22 +39,23 @@
                     <form method="post">
                         <div class="row g-3">
                             <div class="col-md-6">
-                                <input type="text" name="Name" required class="form-control border-0 bg-light px-4" placeholder="Your Name" style="height: 55px;">
+                                <input asp-for="Message.Name" class="form-control border-0 bg-light px-4" placeholder="Your Name" style="height: 55px;" />
                             </div>
                             <div class="col-md-6">
-                                <input type="email" name="Email" required class="form-control border-0 bg-light px-4" placeholder="Your Email" style="height: 55px;">
+                                <input asp-for="Message.Email" type="email" class="form-control border-0 bg-light px-4" placeholder="Your Email" style="height: 55px;" />
                             </div>
                             <div class="col-12">
-                                <input type="text" name="Subject" required class="form-control border-0 bg-light px-4" placeholder="Subject" style="height: 55px;">
+                                <input asp-for="Message.Subject" class="form-control border-0 bg-light px-4" placeholder="Subject" style="height: 55px;" />
                             </div>
                             <div class="col-12">
-                                <textarea name="Message" required class="form-control border-0 bg-light px-4 py-3" rows="4" placeholder="Message"></textarea>
+                                <textarea asp-for="Message.Message" class="form-control border-0 bg-light px-4 py-3" rows="4" placeholder="Message"></textarea>
                             </div>
                             <div class="col-12">
                                 <button class="btn btn-primary w-100 py-3" type="submit">Send Message</button>
                             </div>
                         </div>
                     </form>
+
 
                     @if (Model?.Success == true)
                     {
